--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="right-section">
                     <div class="section-top">
-                        <div class="graph-show"></div>
+                        <div class="graph-show" id="graph-show"></div>
                         <div class="graph-info">
                             <span class="traces-number">16 Traces</span>
                             <div class="sorts-method">
@@ -202,6 +202,7 @@
     <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/search-traces.js?cb=1_1_10"></script>
     <script src="./js/plug-in/single-box.js"></script>
+    <script src="./js/lib/echarts.min.js"></script>
 </body>
 
 </html>
