Service Health Styling

--- a/static/service-health.html
+++ b/static/service-health.html
@@ -60,8 +60,10 @@
                 </div>
             </div>
             <div class="mt-4">
-                        <input type="text" class="search-input" placeholder="Search Service">
-                <div id="ag-grid" class="ag-theme-mycustomtheme mt-5" style="height: 50vh;">
+                <input type="text" class="search-input" placeholder="Search and Filter based on resource attributes">
+            </div>
+            <div class="mt-4 h-100 mb-4" id="tracing-container">
+                <div id="ag-grid" class="ag-theme-mycustomtheme">
                 </div>
             </div>
         </div>
