add copy icon in Dashboard Settings Page

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -609,6 +609,7 @@
                     <div class="dbSet-textareaContainer">
                         <textarea class="dbSet-jsonModelData"
                             placeholder="{'field 1':'value 1',\n 'field 2': 'value 2'}" disabled></textarea>
+                        <div class="copy" title="Copy"></div>
                     </div>
                 </div>
             </div>
