remove unnecessary code

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
+    
         gtag('config', 'G-5SBJC04YFB');
     </script>
 
@@ -117,7 +117,7 @@
                                                                     SELECT first_name AS firstnames, country AS origincountry FROM `ind-0`
                                                                     SELECT MAX(latency), COUNT(city) FROM `*` WHERE gender = male GROUP BY country LIMIT 10
                                                                     SELECT * FROM `*` WHERE app_name = Wheataccount AND gender = male LIMIT 10'>
-
+                            
                             </i>
                             <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-logQL" style="display: none;"
                                 title=' {app="mysql",name="mysql-backup"}
@@ -226,7 +226,7 @@
                 <div id="save-query-div" class="save-query-div">
                     <button class="btn saveq-btn below-btn-img" id="saveq-btn"></button>
                     <button class="btn add-logs-to-db-btn below-btn-img" id="add-logs-to-db-btn" class="mx-3"></button>
-                    <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn" title="Create alert in a new tab"></button>
+                    <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn"></button>
                     <div class="dropdown download-btn">
                         <button class="btn dropdown-toggle download-all-logs-btn below-btn-img" type="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
