--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -79,55 +79,10 @@
                         <span>Tags</span>
                         <input class="form-control" id="tags-input" placeholder="" type="text">
                     </div>
-                    <div class="dropdown lookback">
+                    <div class="dropdown lookback" id="lookback">
                         <span>Lookback</span>
-                        <button class="btn dropdown-toggle" type="button" id="date-picker-btn" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false" data-bs-toggle="dropdown" title="Pick the time window">
-                            <span>Time Picker</span>
-                            <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                            <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
-                        </button>
-                        <div class="dropdown-menu daterangepicker dropdown-time-picker" aria-labelledby="index-btn" id="daterangepicker">
-                            <p class="dt-header">Search the last</p>
-                            <div class="ranges">
-                                <div class="inner-range">
-                                    <div id="now-5m" class="range-item ">5 Mins</div>
-                                    <div id="now-3h" class="range-item">3 Hrs</div>
-                                    <div id="now-2d" class="range-item">2 Days</div>
-                                </div>
-                                <div class="inner-range">
-                                    <div id="now-15m" class="range-item">15 Mins</div>
-                                    <div id="now-6h" class="range-item">6 Hrs</div>
-                                    <div id="now-7d" class="range-item">7 Days</div>
-                                </div>
-                                <div class="inner-range">
-                                    <div id="now-30m" class="range-item">30 Mins</div>
-                                    <div id="now-12h" class="range-item">12 Hrs</div>
-                                    <div id="now-30d" class="range-item">30 Days</div>
-                                </div>
-                                <div class="inner-range">
-                                    <div id="now-1h" class="range-item">1 Hr</div>
-                                    <div id="now-24h" class="range-item">24 Hrs</div>
-                                    <div id="now-90d" class="range-item">90 Days</div>
-                                </div>
-                                <hr>
-                                </hr>
-                                <div class="dt-header">Custom Search <span id="reset-timepicker" type="reset">Reset</span>
-                                </div>
-                                <div id="daterange-from"> <span id="dt-from-text"> From</span> <br />
-                                    <input type="date" id="date-start" />
-                                    <input type="time" id="time-start" value="00:00" />
-                                </div>
-                                <div id="daterange-to"> <span id="dt-to-text"> To </span> <br />
-                                    <input type="date" id="date-end">
-                                    <input type="time" id="time-end" value="00:00">
-                                </div>
-                                <div class="drp-buttons">
-                                    <button class="applyBtn btn btn-sm btn-primary" id="customrange-btn" type="button">Apply</button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
+                    
                     <div class="duration">
                         <div class="input-box">
                             <span>Max Duration</span>
@@ -143,7 +98,7 @@
                         <input class="form-control" id="limit-result-input" placeholder="" type="text">
                     </div>
                     <div class="search-trace-btn-box">
-                        <button class="btn btn-primary search-trace-btn" id="search-trace-btn">Find Traces</button>
+                        <button class="btn search-trace-btn" id="search-trace-btn">Find Traces</button>
                     </div>
                 </div>
                 <div class="right-section">
@@ -159,7 +114,6 @@
                                 <div class="dropdown" id="download-dropdown">
                                 </div>
                             </div>
-                            <!-- <button class="download-trace" id="download-trace">Download Results</button> -->
                         </div>
                     </div>
                     <div class="section-center">
@@ -184,6 +138,7 @@
     <script src="./js/search-traces.js?cb=1_1_10"></script>
     <script src="./componant/single-box/single-box.js"></script>
     <script src="./componant/download/download.js"></script>
+    <script src="./componant/time-picker/time-picker.js"></script>
     <script src="./js/lib/echarts.js"></script>
 </body>
 
