delete duplicated lib

--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -139,7 +139,7 @@
     <script src="./componant/single-box/single-box.js"></script>
     <script src="./componant/download/download.js"></script>
     <script src="./componant/time-picker/time-picker.js"></script>
-    <script src="./js/lib/echarts.js"></script>
+    <script src="./js/lib/echarts.min.js"></script>
 </body>
 
 </html>
