--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="input-box">
                         <span>Limit Result</span>
-                        <input class="form-control" id="limit-result-input" placeholder="" type="text">
+                        <input class="form-control" id="limit-result-input" placeholder="" type="number">
                     </div>
                     <div class="search-trace-btn-box">
                         <button class="btn search-trace-btn" id="search-trace-btn">Find Traces</button>
