--- a/static/service-health-overview.html
+++ b/static/service-health-overview.html
@@ -78,7 +78,7 @@
                         <div class="chart-container">
                             <div class="graph-container mt-2">
                                 <div class="chart_container">
-                                    <div class="ingestion-stats-header">Rate graph</div>
+                                    <div class="ingestion-stats-header">Rate (Request per Second)</div>
                                     <canvas id="ServiceHealthChart"></canvas>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                         <div class="chart-container">
                             <div class="graph-container mt-2">
                                 <div class="chart_container">
-                                    <div class="ingestion-stats-header">Error graph</div>
+                                    <div class="ingestion-stats-header">Error (% of Rate)</div>
                                     <canvas id="ServiceHealthChartErr"></canvas>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                         <div class="chart-container">
                             <div class="graph-container mt-2">
                                 <div class="chart_container">
-                                    <div class="ingestion-stats-header">Latencies graph</div>
+                                    <div class="ingestion-stats-header">Latency</div>
                                     <canvas id="ServiceHealthChart2"></canvas>
                                 </div>
                             </div>
