--- a/static/service-health-overview.html
+++ b/static/service-health-overview.html
@@ -44,55 +44,65 @@
         <div id="app-content-area">
             <div class="cstats-data-container myOrg-container">
                 <div class="myOrg-inner-container">
-                    <div class="usage-stats-header">
-                        <p class="caption">Red metrics graph </p>
-                    </div>
-                    <div class="chart-container">
-                        <div id="filter-container">
-                            <div class="dropdown" id="cstats-time-picker">
-                                <button class="btn dropdown-toggle" type="button" id="date-picker-btn"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data-bs-toggle="dropdown" title="Pick the time window">
-                                    <span>Time Picker</span>
-                                    <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                                    <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
-                                </button>
-                                <div class="dropdown-menu daterangepicker" aria-labelledby="index-btn"
-                                    id="daterangepicker ">
-                                    <p class="dt-header">Graphs for the last</p>
-                                    <div class="ranges">
-                                        <div class="inner-range">
-                                            <div id="now-24h" class="range-item">24 Hrs</div>
-                                            <div id="now-7d" class="range-item">7 Days</div>
-                                        </div>
-                                        <div class="inner-range">
-                                            <div id="now-1h" class="range-item">1 Hr</div>
-                                            <div id="now-6h" class="range-item">6 Hrs</div>
-                                        </div>
-    
+                    <div class="d-flex justify-content-between mt-4 align-items-center">
+                        <div class="d-flex align-items-center gap-2">
+                            <h4 class="service-health-text">Service Health</h4>
+                            <span>></span>
+                            <h3 class="service-name"></h3>
+                        </div>
+                        <div class="dropdown" id="cstats-time-picker">
+                            <button class="btn dropdown-toggle" type="button" id="date-picker-btn"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                data-bs-toggle="dropdown" title="Pick the time window">
+                                <span>Time Picker</span>
+                                <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
+                                <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
+                            </button>
+                            <div class="dropdown-menu daterangepicker" aria-labelledby="index-btn"
+                                id="daterangepicker ">
+                                <p class="dt-header">Graphs for the last</p>
+                                <div class="ranges">
+                                    <div class="inner-range">
+                                        <div id="now-24h" class="range-item">24 Hrs</div>
+                                        <div id="now-7d" class="range-item">7 Days</div>
+                                    </div>
+                                    <div class="inner-range">
+                                        <div id="now-1h" class="range-item">1 Hr</div>
+                                        <div id="now-6h" class="range-item">6 Hrs</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="graph-container mt-2">
-                            <div class="chart_container">
-                                <div class="ingestion-stats-header">Rate graph</div>
-                                <canvas id="ServiceHealthChart"></canvas>
+                    </div>
+                    <div id="one-service-overview">
+                        <div class="d-flex w-100 mt-4 gap-4">
+                            <div class="chart-container">
+                                <div class="graph-container mt-2">
+                                    <div class="chart_container">
+                                        <div class="ingestion-stats-header">Rate (Request per Second)</div>
+                                        <canvas id="ServiceHealthChart"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="chart-container">
+                                <div class="graph-container mt-2">
+                                    <div class="chart_container">
+                                        <div class="ingestion-stats-header">Error (% of Rate)</div>
+                                        <canvas id="ServiceHealthChartErr"></canvas>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="graph-container mt-2">
-                            <div class="chart_container">
-                                <div class="ingestion-stats-header">Error graph</div>
-                                <canvas id="ServiceHealthChartErr"></canvas>
+                        <div class="mt-5 d-flex justify-content-center">
+                            <div class="chart-container">
+                                <div class="graph-container mt-2">
+                                    <div class="chart_container">
+                                        <div class="ingestion-stats-header">Latency</div>
+                                        <canvas id="ServiceHealthChart2"></canvas>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="graph-container mt-2">
-                            <div class="chart_container">
-                                <div class="ingestion-stats-header">Latencies graph</div>
-                                <canvas id="ServiceHealthChart2"></canvas>
-                            </div>
-                        </div>
-
                     </div>
                     <div id="cstats-app-footer">
                         2023 &copy; SigLens
