--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="./css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" href="./css/siglens.css" />
     <link rel="stylesheet" href="./css/tracing.css" />
-    <link rel="stylesheet" href="./componant/single-box/single-box.css" />
-    <link rel="stylesheet" href="./componant/download/download.css" />
-    <link rel="stylesheet" href="./css/search-traces.css" />
+    <link rel="stylesheet" href="./component/single-box/single-box.css" />
+    <link rel="stylesheet" href="./component/download/download.css" />
+    <link rel="stylesheet" href="./css/tracing.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
     <script src="./js/lib/lodash.min.js"></script>
@@ -136,9 +136,9 @@
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/search-traces.js?cb=1_1_10"></script>
-    <script src="./componant/single-box/single-box.js"></script>
-    <script src="./componant/download/download.js"></script>
-    <script src="./componant/time-picker/time-picker.js"></script>
+    <script src="./component/single-box/single-box.js"></script>
+    <script src="./component/download/download.js"></script>
+    <script src="./component/time-picker/time-picker.js"></script>
     <script src="./js/lib/echarts.min.js"></script>
 </body>
 
