Fixed dependency graph UI error

--- a/static/dependency-graph.html
+++ b/static/dependency-graph.html
@@ -62,7 +62,7 @@
             </div>
             <div id="dependency-graph-container"></div>
             <div id="error-msg-container">
-                <p>No service dependencies found.</p>
+                <p>Data is being ingested...</p>
             </div>
         </div>
 
