--- a/static/dependency-graph.html
+++ b/static/dependency-graph.html
@@ -61,8 +61,12 @@
                 </div>
             </div>
             <div id="dependency-graph-container"></div>
+            <div id="empty-msg-container" > 
+                <p> Data is being ingested... </p>
+            </div>
             <div id="error-msg-container">
-                <p>Data is being ingested...</p>
+                <p> No service dependency graph found.</p>
+                
             </div>
         </div>
 
