--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -51,7 +51,7 @@
         <div id="app-side-nav" class="active">
         </div>
         <div id="download-trace"></div>
-        <div id="dashboard" class="p-20">
+        <div id="dashboard" class="p-20 pb-0">
             <div class="subsection-navbar">
                 <div>
                     <h1 class="myOrg-heading">Tracing</h1>
