--- a/static/contacts.html
+++ b/static/contacts.html
@@ -81,8 +81,13 @@
             <div class="delete-dialog">
                 <h3 class="header">Cannot delete contact point</h3>
                 <p>The contact point named <strong id="contact-name-placeholder-delete-dialog"></strong> is currently in use by multiple alerts.</p>
+                <button type="button" id="view-btn">View alerts associated with this contact point</button>
                 <button type="button" id="cancel-btn">Close</button>
+                <div class="alertsView">
+                    <p><strong id="alert-name-placeholder-alertsView"></strong></p>
+                </div>
             </div>
+            
         </div>
 
         <div id="app-footer">
