--- a/static/index.html
+++ b/static/index.html
@@ -240,18 +240,18 @@
                 </div>
                 <div id="views-container">
                     <div class="btn-group" role="group" id="log-view">
-                        <button class="btn" id="log-opt-single-btn">
+                        <button class="btn log-opt-single-btn" id="log-opt-single-btn">
                             <span class="single-line-icon" title="Single Line Display View"></span>
                         </button>
-                        <button class="btn" id="log-opt-multi-btn">
+                        <button class="btn log-opt-multi-btn" id="log-opt-multi-btn">
                             <span class="multi-line-icon" title="Wrap Line Display View"></span>
                         </button>
-                        <button class="btn" id="log-opt-table-btn">
+                        <button class="btn log-opt-table-btn" id="log-opt-table-btn">
                             <span class="table-view-icon" title="Table Display View"></span>
                         </button>
                     </div>
                     <div class="dropdown">
-                        <button class="btn dropdown-toggle" title="Select field names to display" type="button"
+                        <button class="btn dropdown-toggle avail-fields-btn" title="Select field names to display" type="button"
                             id="avail-fields-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             data-bs-toggle="dropdown">
                             <i class="fa-solid fa-list-check" title="Select field names to display"></i>&nbsp;
