--- a/static/metrics.html
+++ b/static/metrics.html
@@ -59,7 +59,7 @@
                         placeholder="Enter PromQL Query" title="Enter PromQL Query">
                 </div>
                 <div class="text-end">
-                    <button class="btn" id="run-metrics-query-btn" title="Run Query">Run Query</button>
+                    <button class="btn run-metrics-query-btn" id="run-metrics-query-btn" title="Run Query">Run Query</button>
                 </div>
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="date-picker-btn" data-toggle="dropdown"
@@ -116,7 +116,7 @@
                 <button class="btn metrics-graph-btn active">Graph</button>
                 <button class="btn metrics-table-btn">Table</button>
             </div>
-            <div id="metrics-graph-container">
+            <div id="metrics-graph-container" class="metrics-graph-container">
                 <div class="metrics-response">
                 </div>
 
